# LLM-engineering

./: .gitignore  CMakeLists.txt
src/kernels/: attn_softmax_kernel.cu  concat_past_kv.cu  fused_decoder_self_attention.cu  linear.cu  repeat_kv.cu
src/models/: tokenizer2.h
src/models/llama/: llama.h
tools/: convert_downloaded_llama_weights.py  tokenizer.py  weights_convert.py
